# specs-agent

./: .dockerignore  .env.example  .gitignore  AI_MODELS.md  CLAUDE.md  Dockerfile  INSTALL_LOCAL.md  README.md  docker-compose.yml  install.sh  pyproject.toml
config/: default_config.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  INFRASTRUCTURE.md  SECURITY.md
k8s/specs-agent/: .gitignore  00-namespace.yaml  10-mongodb.yaml  11-elasticsearch.yaml  20-secret.example.yaml  30-configmap.yaml  40-api.yaml  41-web.yaml  50-ingress.yaml  60-network-policy.yaml  README.md
src/specs_agent/: __init__.py  __main__.py  app.py  app.tcss  config.py  curl_builder.py  persistence.py
src/specs_agent/ai/: __init__.py  anthropic_backend.py  cache.py  download.py  generator.py  http_backend.py  models.py  openai_backend.py  prompts.py
src/specs_agent/api/: __init__.py  __main__.py  app.py  converters.py  schemas.py
src/specs_agent/engine/: __init__.py  engine.py  factory.py  mongo_storage.py  storage.py
src/specs_agent/execution/: __init__.py  functional.py  performance.py  runner.py  token_fetch.py  validators.py
src/specs_agent/history/: __init__.py  storage.py
src/specs_agent/models/: __init__.py  config.py  plan.py  results.py  spec.py
src/specs_agent/net/: __init__.py  docker_hosts.py
src/specs_agent/parsing/: __init__.py  extractor.py  loader.py  plan_generator.py
src/specs_agent/reporting/: __init__.py  formatters.py  generator.py
src/specs_agent/reporting/templates/: report_template.html
src/specs_agent/screens/: __init__.py  detail_modal.py  execution.py  navigation.py  plan_editor.py  quit_modal.py  refresh_diff_modal.py  report_export.py  result_detail_modal.py  results.py  retry_editor_modal.py  scan_preview.py  spec_browser.py  test_config.py  variables_modal.py  welcome.py
src/specs_agent/search/: __init__.py  client.py  converters.py  indexer.py  schema.py  service.py
src/specs_agent/templating/: __init__.py  variables.py
src/specs_agent/widgets/: __init__.py  endpoint_tree.py  method_badge.py  starfield.py
tests/: conftest.py  test_ai_scenarios.py  test_curl.py  test_e2e_live.py  test_persistence.py
tests/fixtures/: enterprise_nexus.yaml  minimal_spec.yaml  petstore_v2.yaml  petstore_v3.json
tests/test_ai/: test_cache.py  test_generator.py  test_prompts.py
tests/test_api/: conftest.py  test_api_flow.py  test_docker_rewrite.py  test_execute_ws.py  test_routes.py  test_search_route.py
tests/test_config/: test_config.py
tests/test_engine/: test_engine.py  test_mongo_storage.py
tests/test_execution/: test_functional.py  test_performance.py  test_runner.py  test_validators.py
tests/test_history/: test_storage.py
tests/test_integration/: test_engine_flow.py  test_mongo_engine_flow.py  test_pipeline.py
tests/test_models/: test_plan.py  test_spec.py
tests/test_parsing/: test_extractor.py  test_loader.py  test_plan_generator.py
tests/test_reporting/: test_formatters.py  test_generator.py
tests/test_screens/: test_tui.py
tests/test_search/: test_converters.py  test_service.py
tests/test_templating/: test_variables.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: ai-icon.ts  api.ts  confirm.ts  curl.ts  dom.ts  endpoint-detail.ts  main.ts  modal.ts  motion.ts  progress-overlay.ts  router.ts  state.ts  styles.css  toast.ts  types.ts  variables.ts
web/src/modals/: ai-settings.ts  regenerate-options.ts  retry-editor.ts  test-case.ts  test-config.ts  variables.ts
web/src/screens/: execution.ts  history-view.ts  history.ts  home.ts  plan-view.ts  plan.ts  results.ts  spec.ts  welcome.ts
