[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specs-agent"
version = "0.1.0"
description = "API Testing TUI - Generate test plans from Swagger/OpenAPI specs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
    "prance>=23.6.0",
    "openapi-spec-validator>=0.7.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20.0",
    "jinja2>=3.1.0",
    "click>=8.1.0",
    "faker>=30.0.0",
    "hdrhistogram>=0.10.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pymongo>=4.5.0",
    "motor>=3.4.0",
    "elasticsearch[async]>=8.13.0,<9.0.0",
    # Multi-provider AI scenario generation. Cheap installs (pure-Python wrappers
    # over httpx) so they live in the base deps — keeps the container self-
    # contained for any provider the user picks at runtime via AI Settings.
    "anthropic>=0.40.0",
    "openai>=1.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mongomock>=4.1.0",
]
# llama-cpp-python is the only heavy/optional dep — it builds native code,
# adds ~200MB to the image, and is only needed for the local_gguf provider.
ai = [
    "llama-cpp-python>=0.2.0",
]
pdf = [
    "weasyprint>=60.0",
]

[project.scripts]
specs-agent = "specs_agent.__main__:main"
specs-agent-api = "specs_agent.api.__main__:main"
specs-agent-download-model = "specs_agent.ai.download:download_model"

[tool.hatch.build.targets.wheel]
packages = ["src/specs_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
